Update web scraping 2.ipynb

--- a/web scraping 2.ipynb
+++ b/web scraping 2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 1-  Python program to scrape data for “Data Analyst” Job position in “Bangalore” location.\n"
+    "# Task 1"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get('https://www.naukri.com/')\n",
