--- a/web scraping 2.ipynb
+++ b/web scraping 2.ipynb
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 2- Python program to scrape data for “Data Scientist” Job position in banglore location\n"
+    "# Task 2"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get('https://www.naukri.com/')"
@@ -752,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 3- Scraping data using the filters available on the webpage \n"
+    "# Task 3"
    ]
   },
   {
@@ -906,7 +906,7 @@
     }
    ],
    "source": [
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get('https://www.naukri.com/')\n",
@@ -1018,7 +1018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 4- python program to scrape data for first 10 job results for Data scientist From Glassdoor\n"
+    "# Task 4"
    ]
   },
   {
@@ -1147,7 +1147,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get('https://www.glassdoor.co.in/index.htm')\n",
@@ -1226,7 +1226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 6- Scraping data of first 100 sunglasses listings on flipkart.com."
+    "# Task 6"
    ]
   },
   {
@@ -1380,7 +1380,7 @@
     }
    ],
    "source": [
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get(\"https://www.flipkart.com/\")\n",
@@ -1620,7 +1620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 7-100 reviews data from flipkart.com for iphone11 phone."
+    "#  Task 7"
    ]
   },
   {
@@ -1629,7 +1629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get('https://www.flipkart.com/apple-iphone-11-black-64-gb-includes-earpods-power-adapter/p/itm0f37c2240b217?pid=MOBFKCTSVZAXUHGR&lid=LSTMOBFKCTSVZAXUHGREPBFGI&marketplace')\n",
@@ -2411,7 +2411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 8- Scraping data for first 100 sneakers you find when you visit flipkart.com"
+    "#  Task 8"
    ]
   },
   {
@@ -2565,7 +2565,7 @@
     }
    ],
    "source": [
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get('https://www.flipkart.com/')\n",
@@ -2775,7 +2775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 9 -Shoe scraping from myntra"
+    "# Task 9"
    ]
   },
   {
@@ -2904,7 +2904,7 @@
     }
    ],
    "source": [
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get(\"https://www.myntra.com/shoes\")\n",
@@ -3042,7 +3042,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 10-Scraping of Laptop from amazon"
+    "# Task 10"
    ]
   },
   {
@@ -3053,7 +3053,7 @@
    "source": [
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get(\"https://www.amazon.in/\")\n",
@@ -3487,7 +3487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution 5- python program to scrape the salary data for Data Scientist designation in Noida location."
+    "
    ]
   },
   {
@@ -3505,7 +3505,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
-    "path = r\"C:\\Users\\verma\\Desktop\\Selenium\\chromedriver.exe\"\n",
+    "path = r\"C:\\Users\\user\\ansari\\Selenium\\chromedriver.exe\"\n",
     "\n",
     "driver=webdriver.Chrome(path)\n",
     "my_page=driver.get('https://www.glassdoor.co.in/Salaries/index.htm')\n",
